<resources>
    <string name="app_name">Popular Movies</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_movie_detail">Movie Details</string>
    <string name="action_sort">Sort order</string>
    <string name="key_sortorder">KEY_SORTORDER</string>
    <string name="title_setting_sortorder">Sort Order</string>
    <string name="default_value_sortorder">popularity.desc</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <string name="label_synopsis">SYNOPSIS</string>
    <string name="title_activity_setting">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="label_sort_popular">Most Popular</string>
    <string name="label_sort_rated">Highest Rated</string>
    <string name="favorite_button_text">Add to Favorites</string>
    <string name="message_favorite_added">Added to favorites!</string>
    <string name="label_reviews">SEE FULL REVIEWS</string>
    <string name="title_activity_view_reviews">ViewReviewsActivity</string>
    <string name="title_reviews">Reviews</string>
    <string name="label_trailers">TRAILERS</string>
    <string name="message_favorite_removed">Removed from favorites!</string>
    <string name="label_sort_favorites">Favorites</string>
    <string name="sortorder_favorites">Favorites</string>
    <string name="no_movie_selected">No movie selected.</string>
    <string name="favorite_button_set_text">Favorited!</string>
    <string name="err_network">Error while fetching information from the web! Please check your internet connection.</string>
    <string name="msg_no_reviews">No reviews found for this movie.</string>
    <string name="err_no_favorites">You haven\'t added any favorites yet!</string>
    <string name="label_review_title">REVIEWS</string>
</resources>
