<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh"
        android:orderInCategory="1"
        android:title="@string/action_refresh"
        app:showAsAction="always"></item>
    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_action_sort"
        android:orderInCategory="2"
        android:title="@string/action_sort"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/sortorder_favorites"
                android:title="@string/sortorder_favorites"
                />
            <item
                android:id="@+id/sortorder_popularity"
                android:title="@string/label_sort_popular" />
            <item
                android:id="@+id/sortorder_rating"
                android:title="@string/label_sort_rated" />
        </menu>
    </item>
</menu>